bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:6: error: too many arguments for method drop: (n: Int)String
    s+=str.drop(0,3)
               ^